--- a/backend/src/Jobs/appsettings.json
+++ b/backend/src/Jobs/appsettings.json
@@ -15,7 +15,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "StackLab.Survey.WebAPI"
+      "Application": "StackLab.Survey.Jobs"
     }
   }
 }
