--- a/backend/tests/Domain.UnitTests/Domain.UnitTests.csproj
+++ b/backend/tests/Domain.UnitTests/Domain.UnitTests.csproj
@@ -24,4 +24,9 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Auth\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
