--- a/backend/src/Jobs/appsettings.Development.json
+++ b/backend/src/Jobs/appsettings.Development.json
@@ -8,5 +8,10 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;user id=root;Password=root;persist security info=True;database=survey;Pooling=true;MaximumPoolSize=10"
+  },
+
+  "Quartz": {
+    "User": "admin",
+    "Password": "admin"
   }
 }
